--- a/views/index.html
+++ b/views/index.html
@@ -148,7 +148,7 @@
       <div class="credit">
         <p>
           Created by
-          <a href="https://www.instagram.com/ahmadfathir19">Ahmad fathir</a>. |
+          <a href="https://www.instagram.com/ahmadfathir19">Anonim</a>. |
           &copy; 2024.
         </p>
       </div>
